[package]
name = "rocket-webapi"
version = "0.1.0"
authors = ["ts 21 <shoukitsuda0310@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
# serdeのcrateを追加する
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"